fixing missing footer on mobile chrome

--- a/css/main.css
+++ b/css/main.css
@@ -99,6 +99,7 @@ body {
 header, footer {
     background-color: #0a0;
     width: 100%;
+    overflow: hidden;
 }
 
 footer {
